--- a/2.html
+++ b/2.html
@@ -7,11 +7,11 @@
 
 
  <body>
-     <h1><a href = "http://127.0.0.1:51697/index.html" title = "메인 페이지로 이동">이예린?</a></h1>
+     <h1><a href = "file:///C:/Users/DLAB/Desktop/web/index.html" title = "메인 페이지로 이동">이예린?</a></h1>
         <ol>
             <li> <a href = "http://127.0.0.1:51697/1.html" title = "인적사항 페이지로 이동">인적사항</a> </li>
-            <li> <a href = "http://127.0.0.1:51697/2.html" title = "취미1 페이지로 이동"> 취미1</a></li>
-            <li> <a href = "http://127.0.0.1:51697/3.html" title = "취미2 페이지로 이동"> 취미2</a></li>
+            <li> <a href = "file:///C:/Users/DLAB/Desktop/web/2.html" title = "취미1 페이지로 이동"> 취미1</a></li>
+            <li> <a href = "file:///C:/Users/DLAB/Desktop/web/3.html" title = "취미2 페이지로 이동"> 취미2</a></li>
         </ol>
 
      <h2>취미1</h2>
