--- a/1.html
+++ b/1.html
@@ -15,7 +15,7 @@
         </ol>
 
      <h2>인적사항</h2>
-        <img src="bonnie.png" width="200">
+        <img src="yerin.jpg" width="200">
         <p>안녕하세요 저는 <strong>이<u>예</u>린</strong> 입니다. 구로에서 살고있고 나이는 27살 입니다. 키는 161이고 A형입니다. 생일은 7월 19일 입니다. 전화번호는 010 4305 0719 입니다. 마지막자리가 제 생일이니까 꼭 기억하세요</p>
  </body>
 </html>
